--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -2,7 +2,7 @@
 <navigation xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    app:startDestination="@id/blankFragment">
+    app:startDestination="@id/mapsFragment">
     <fragment
         android:id="@+id/mapsFragment"
         android:name="thulanicreatives.com.myweatherapp.MapsFragment"
