[W-1000] Updated map place,and map click

--- a/app/src/main/res/layout/fragment_maps.xml
+++ b/app/src/main/res/layout/fragment_maps.xml
@@ -10,14 +10,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" />
 
-<!--    <include-->
-<!--        android:id="@+id/bottomSheet"-->
-<!--        layout="@layout/item_bottom_sheet_container"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:background="@drawable/background_bottom_sheet"-->
-<!--        app:layout_anchorGravity="bottom"-->
-<!--        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">-->
+    <include
+        android:id="@+id/bottom_sheet_parent"
+        layout="@layout/card_preview_item"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/background_bottom_sheet"
+        app:layout_anchorGravity="bottom"
+        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
 
-<!--    </include>-->
+    </include>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
