--- a/app/src/main/res/layout/item_bottom_sheet_container.xml
+++ b/app/src/main/res/layout/item_bottom_sheet_container.xml
@@ -1,64 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/bottomSheet"
-    android:background="@drawable/background_bottom_sheet">
-
-    <FrameLayout
-        android:id="@+id/frameLayout"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:layout_marginBottom="10dp"
+    tools:context=".MainActivity">
+    <androidx.cardview.widget.CardView
+        android:layout_width="340dp"
+        android:layout_height="match_parent"
+        app:cardCornerRadius="11dp"
+        app:cardElevation="11dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/title"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:padding="10dp"
-            android:paddingBottom="2dp"
-            android:text="Pull This Layout"
-            android:textColor="@color/white"
-            android:textSize="14sp" />
-        <TextView
-            android:id="@+id/title3"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:padding="10dp"
-            android:paddingBottom="2dp"
-            android:text="Pull This Layout"
-            android:textColor="@color/white"
-            android:textSize="14sp" />
-        <TextView
-            android:id="@+id/title1"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:padding="10dp"
-            android:paddingBottom="2dp"
-            android:text="Pull This Layout"
-            android:textColor="@color/white"
-            android:textSize="14sp" />
-        <TextView
-            android:id="@+id/title2"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:padding="10dp"
-            android:paddingBottom="2dp"
-            android:text="Pull This Layout"
-            android:textColor="@color/white"
-            android:textSize="14sp" />
+    </androidx.cardview.widget.CardView>
 
-    </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
