--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,15 +4,14 @@ xmlns:app="http://schemas.android.com/apk/res-auto"
 xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
-tools:context=".MainActivity">
+tools:context=".weather.ui.MainActivity">
 
 <androidx.coordinatorlayout.widget.CoordinatorLayout
     android:layout_width="match_parent"
-    android:layout_height="0dp"
+    android:layout_height="@dimen/none"
     app:layout_constraintBottom_toTopOf="@+id/bottom_navigation_view"
     app:layout_constraintTop_toTopOf="parent"
     tools:context=".ui.main.MainActivity">
-
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -21,8 +20,8 @@ tools:context=".MainActivity">
         <androidx.fragment.app.FragmentContainerView
             android:id="@+id/nav_host_fragment"
             android:name="androidx.navigation.fragment.NavHostFragment"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_width="@dimen/none"
+            android:layout_height="@dimen/none"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -30,20 +29,18 @@ tools:context=".MainActivity">
             app:defaultNavHost="true"
             app:navGraph="@navigation/navigation" />
 
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
-
-
+    
 <com.google.android.material.bottomnavigation.BottomNavigationView
     android:id="@+id/bottom_navigation_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="bottom"
     android:background="@color/colorPrimary"
-    app:contentInsetEnd="0dp"
-    app:contentInsetStart="0dp"
+    app:contentInsetEnd="@dimen/none"
+    app:contentInsetStart="@dimen/none"
     app:itemBackground="@color/colorPrimary"
     app:itemIconTint="@drawable/bottom_navigation_selector"
     app:itemRippleColor="@color/colorAccent"
