--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -5,12 +5,7 @@
     app:startDestination="@id/mapsFragment">
     <fragment
         android:id="@+id/mapsFragment"
-        android:name="thulanicreatives.com.myweatherapp.MapsFragment"
+        android:name="thulanicreatives.com.myweatherapp.weather.ui.MapsFragment"
         android:label="fragment_maps"
         tools:layout="@layout/fragment_maps" />
-    <fragment
-        android:id="@+id/blankFragment"
-        android:name="thulanicreatives.com.myweatherapp.BlankFragment"
-        android:label="fragment_blank"
-        tools:layout="@layout/fragment_blank" />
 </navigation>
