--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,18 +5,16 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
+    <color name="black">#FFFFFF</color>
     <color name="white">#FFFFFFFF</color>
 
     ///    <color name="colorPrimary">#FFFFFF</color>
-    <color name="colorPrimaryNight">#000000</color>
 
 
     <color name="colorSecondary">#786C6C</color>
     <color name="colorSecondaryNight">#323131</color>
 
     <color name="colorPrimaryDark">#FFFFFF</color>
-    <color name="colorPrimaryDarkNight">#000000</color>
 
     <color name="colorAccent">#3B72FF</color>
     <color name="colorAccentNight">#3B72FF</color>
@@ -34,14 +32,12 @@
     <color name="colorContainerSecondaryNight">#373F4D</color>
 
     <color name="colorNavigationBottomBackground">#FFFFFF</color>
-    <color name="colorNavigationBottomBackgroundNight">#191813</color>
 
     <color name="colorBookNowBackground">#F7FFFFFF</color>
     <color name="colorBookNowBackgroundNight">#F7F2F4F2</color>
 
-    <color name="colorContainerBackground">#1F1B1B</color>
+    <color name="colorContainerBackground">#FF1B3B5A</color>
     <color name="colorContainerBackgroundDim">#3A3737</color>
 
     <color name="colorToolbarTransparentDay">#ABFFFFFF</color>
-    <color name="colorToolbarTransparentNight">#AB000000</color>
 </resources>
